--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,6 @@
   },
   "permissions": ["activeTab", "scripting"],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "blackboard.js"
   }
 }
